[package]
name = "solana_constant_yield_valdity_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1.19"

solana-client = "1.18.26"
solana-sdk = "1.18.26"
base64 = "0.21"
bincode = "1.3"

